--- a/practica1/index.html
+++ b/practica1/index.html
@@ -8,7 +8,14 @@
 
 </head>
 <body>
-    <h1> holaaaaaaaaaa</h1>
+    <h1> imagenes</h1>
+    <img src="media/img/perro.jpg" width="600px" height="399px" alt=""srcset="">
+    <img src="https://media.istockphoto.com/id/1246559733/es/foto/un-brindle-azul-y-blanco-pit-bull-terrier-perro-de-raza-mixta-escuchando-con-una-inclinaci%C3%B3n.jpg?s=612x612&w=0&k=20&c=-GpmZ7g_4spJFZLQXV869xz-mmYyJcCgaic2DKlo7nU=" width="600px" height="399px" alt=""srcset="">
+    
+    <h3>HiperVinculos</h3>
+    <a href="">interno</a>
+    
+
 
 
 
